PathsGames v0.28.5 Locations map view on react-game  and cards informations on locations api
